--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<div id="selectData">
-		<input type="text">
-	</div>
+	<input type="text" id="selectData">
 	<script src="./jquery-1.9.1.min.js"></script>
 	<script src="./selectData.js"></script>
 	<script>
@@ -16,14 +14,12 @@
 		arr[1] = ['850542.SL','钨','指数'];
 		arr[2] = ['0777.HK','网龙','港股'];
 		arr[3] = ['WB.O','微博','美股'];
-		$("#selectData").selectData({
-			data:arr,
-			pos:'top', //其他 bottom 默认 top
-			top: '30px',
-			left: '0px',
-			height: '100px',
-			width: '200px'
-		});
+		$("#selectData").on("keyup", function() {
+			var val = $(this).val();
+			var res = autoSelect.query(val,arr);
+			$('body').append(res + '\n');
+			console.log(res);
+		})
 	</script>
 </body>
 </html>
